--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							
 										<h2><a href="https://github.com/AhmadTheDataNerd/Data-Cleanig-With-Python">Data Cleaning In Python</a></h2>
 									</header>
-									<a href="https://github.com/AhmadTheDataNerd/Data-Cleanig-With-Python" class="image fit"><img src="images/oip.jpg" alt="" /></a>
+									<a href="https://github.com/AhmadTheDataNerd/Data-Cleanig-With-Python" class="image fit"><img src="images/OIP.jpg" alt="" /></a>
 									<p>This data was gotten from a Phone Network Company. i showcase my Python skills by cleaning the data using
 										pandas to show my Proficiency in the tool. Data Cleaning techniques incudes handling missing values, 
 										removing duplicates, handling outliesr and data transformation</p>
